--- a/res/values/strings_activity_login.xml
+++ b/res/values/strings_activity_login.xml
@@ -13,5 +13,14 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="action_sign_up">Reģistrēties</string>
+	<string name="action_confirm">Apstiprināt izmaiņas</string>
+	<string name="action_invite">Uzaicināt draugu</string>
+	<string name="password_old">Vecā parole</string>
+	<string name="password_1">Parole</string>
+	<string name="password_2">Parole atkārtoti</string>
+	<string name="mail">Epasts</string>
+	<string name="friend_mail">Drauga epasts</string>
+	<string name="name">Vārds</string>
 
 </resources>
