--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -65,11 +65,20 @@
                 android:id="@+id/sign_in_button"
                 android:layout_width="278dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
                 android:layout_marginTop="16dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
-                android:text="@string/action_sign_in_register" />
+                android:text="@string/action_sign_in" />
+
+            <Button
+                android:id="@+id/sign_up_button"
+                android:layout_width="278dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:text="@string/action_sign_up" />
+
         </LinearLayout>
     </ScrollView>
 
