--- a/res/layout/activity_sign_up.xml
+++ b/res/layout/activity_sign_up.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress" 
-        android:text="@string/mail"/>
+        android:hint="@string/mail"/>
    
 
     <EditText
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="@string/password_1"/>
+        android:hint="@string/password_1"/>
 
     <EditText
         android:id="@+id/password_conf"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="@string/password_2"/>
+        android:hint="@string/password_2"/>
     
 
     <EditText
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/name"/>
+        android:hint="@string/name"/>
 
     <Button
         android:id="@+id/sign_up_button"
