--- a/res/values/strings_activity_login.xml
+++ b/res/values/strings_activity_login.xml
@@ -5,7 +5,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in_register"><b>Sign in</b> </string>
+    <string name="action_sign_in"><b>Ielogoties</b> </string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_forgot_password">Recover lost password</string>
     <string name="login_progress_signing_in">Signing in&#8230;</string>
@@ -22,5 +22,8 @@
 	<string name="mail">Epasts</string>
 	<string name="friend_mail">Drauga epasts</string>
 	<string name="name">Vārds</string>
+	<string name="approve_sign_up">Reģistrācijas apstiprināšanas kods</string>
+	<string name="action_approve_sign_up">Pabeigt reģistrāciju</string>
+	
 
 </resources>
